<resources>
    <string name="app_name">Dementia</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm">confirm</string>
    <string name="first_time_login_profile_update">First Time Login (Profile Update)</string>
    <string name="share">share</string>
    <string name="get_started_continue_on_progress">Get Started / Continue on Progress</string>
    <string name="back_to_home">Back to Home</string>
    <string name="GetStarted">Get Started</string>
    <string name="continueOnProgress">Continue on Progress</string>
    <string name="displayanswer">DisplayAnswer</string>
    <string name="correctAnswer">Correct! Proceed -></string>
    <string name="wrongAnswer">Wrong Answer!</string>
    <string name="tryAgain">Please try Again!</string>
    <string name="checkOnCert">Check on Certificate!</string>
    <string name="title_activity_cert">title_activity_cert</string>
    <string name="CurrentProgress">CurrentProgress</string>
    <string name="download"> Download</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="backToRevision">Back to Revision</string>
    <string name="topics_content">Topics Content</string>
    <string name="cert_content">Certificate</string>
    <string name="please_insert_your_email">Please insert your email below!</string>
    <string name="create_new_password">Create New Password</string>
    <string name="update_password_details">Your New Password must be different from Previously Password!</string>
    <string name="save_password">SAVE</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <string name="reset_password">Reset Password!</string>
    <string name="close">close</string>
    <string name="profile">PROFILE</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="update_new_phone_number">Update New Phone Number!</string>
    <string name="please_insert_all_details">Please insert all details.</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="or">OR</string>
    <string name="password">Password</string>
    <string name="choose_answer">Choose 1 Answer!</string>


    <!--    <string name="default_web_client_id" translatable="false"></string>-->
    <string name="designed">Designed by \n Team 8</string>
    <string name="set_password">Set Password</string>
    <string name="full_name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enteryourname">Enter your Name</string>
    <string name="validemail">Enter a valid email address</string>
    <string name="validpassword">Between 6 and 12 alphanumeric characters</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="forgot_password">Forgot ?  </string>
    <string name="by_using_this_ui_ux_you_agree">by using this ui/ux you agree to our</string>
    <string name="title_activity_sign_up">SignUp</string>

    <string name="OK">OK</string>
    <string name="orsigninusing">Or sign in using</string>
    <string name="orsignupusing">Or sign up using</string>
    <string name="aboutyou">About You</string>
    <string name="uploadphoto">Upload your best recent picture</string>
    <string name="pickYourDate">Pick your date of birth</string>
    <string name="username">Username</string>
    <string name="iam">I\'m</string>
    <string name="validusername">Enter Username</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="done">DONE</string>


</resources>

