<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:gl="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main"
    style="@style/parent.contentLayout">

    <TextView
        android:id="@+id/txtProfile"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_white"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProfile"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_white"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName"
        tools:text="@string/email" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_white"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:text="@string/phone_number" />

    <EditText
        android:id="@+id/inputPhoneNumber"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="@drawable/border_white"
        android:drawableStart="@drawable/baseline_phone_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/new_phone_number"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/border_button_white"
        android:text="@string/confirm"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPhoneNumber" />

    <View
        android:id="@+id/view"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="372dp"
        android:layout_height="52dp"
        android:layout_gravity="start"
        android:layout_marginTop="26dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/andada"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:text="@string/update_new_phone_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_red"
        android:contentDescription="@string/close"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>