<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_gradient4"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/andada"
            android:text="@string/create_new_password"
            android:textColor="@color/dark_blue"
            android:layout_marginHorizontal="@dimen/margin_15"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/andada"
            android:text="@string/update_password_details"
            android:textColor="@color/dark_blue"
            android:layout_marginHorizontal="@dimen/margin_15"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
        android:id="@+id/inputNewPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:background="@drawable/border_holo_blue"
        android:drawableStart="@drawable/baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue" />

        <EditText
            android:id="@+id/inputConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginHorizontal="@dimen/margin_15"
            android:background="@drawable/border_holo_blue"
            android:drawableStart="@drawable/baseline_security_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingTop="13dp"
            android:paddingRight="20dp"
            android:paddingBottom="13dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/dark_blue" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/border_button_white"
        android:enabled="true"
        android:text="@string/save_password"
        android:textColor="@color/dark_blue"
        android:paddingHorizontal="@dimen/margin_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:background="@drawable/border_empty"
        android:contentDescription="@string/close"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>