<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/home_gradient4"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_gravity="start"
            android:layout_marginTop="80dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/andada"
            android:text="@string/please_insert_your_email"
            android:textColor="@color/dark_blue"
            android:layout_marginHorizontal="@dimen/margin_15"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:background="@drawable/border_holo_blue"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/border_button_white"
        android:enabled="true"
        android:text="@string/reset_password"
        android:textColor="@color/dark_blue"
        android:paddingHorizontal="@dimen/margin_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:background="@drawable/border_empty"
        android:contentDescription="@string/close"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.994"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>