<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clipToPadding="false"
    tools:context=".SignUpActivity"
    tools:ignore="HardcodedText">

    <com.example.mobileprogramming_assignment.cairoTextView
        android:id="@+id/id_SignIn_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="76dp"
        android:text="@string/sign_up"
        android:textColor="@color/signupsignintextcolor"
        android:textSize="@dimen/textsize_28"
        android:textStyle="bold"
        android:layout_marginStart="50dp" />

    <!--  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/id_signUp_Button"
        android:layout_below="@+id/id_SignIn_TextView"
        android:layout_gravity="center"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/rect"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_Nume_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="@dimen/margin_23"
            android:layout_marginTop="@dimen/margin_33"
            android:layout_marginRight="@dimen/margin_23"
            android:background="@null">

            <com.example.mobileprogramming_assignment.cairoEditText
                android:id="@+id/id_fullName_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/full_name"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/textsize_18"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/margin_23"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginRight="@dimen/margin_23"
            android:background="@color/linecolor"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_Email_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="@dimen/margin_23"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginRight="@dimen/margin_23"
            android:background="@null">

            <com.example.mobileprogramming_assignment.cairoEditText
                android:id="@+id/id_email_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/email"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/textsize_18"/>

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/margin_23"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginRight="@dimen/margin_23"
            android:background="@color/linecolor"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/id_Password_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginLeft="@dimen/margin_23"
            android:layout_marginTop="@dimen/margin_4"
            android:layout_marginRight="@dimen/margin_23"
            android:background="@null">

            <com.example.mobileprogramming_assignment.cairoEditText
                android:id="@+id/id_password_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/primarytext"
                android:textSize="@dimen/textsize_18" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/id_view_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/margin_23"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginRight="@dimen/margin_23"
            android:background="@color/linecolor"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.example.mobileprogramming_assignment.cairoTextView
                android:id="@+id/id_login_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_26"
                android:text="@string/sign_in"
                android:textColor="@color/signupsignintextcolor"
                android:textSize="@dimen/textsize_16"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/margin_4" />

            <com.example.mobileprogramming_assignment.cairoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_26"
                android:text="@string/orsignupusing"
                android:textColor="@color/secondarytext"
                android:textSize="@dimen/textsize_14" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_27">

            <Button
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/height_50"
                android:layout_marginLeft="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginRight="@dimen/margin_22"
                android:layout_marginBottom="@dimen/margin_22"
                android:background="@drawable/ic_facebook_background"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/id_signInGoogle_Button"
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/height_50"
                android:layout_marginLeft="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_22"
                android:layout_marginRight="@dimen/margin_22"
                android:layout_marginBottom="@dimen/margin_22"
                android:background="@drawable/ic_google_background" />

            <Button
                android:layout_width="@dimen/width_50"
                android:layout_height="@dimen/height_50"
                android:layout_marginLeft="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginEnd="@dimen/margin_22"
                android:layout_marginRight="@dimen/margin_22"
                android:layout_marginBottom="@dimen/margin_22"
                android:background="@drawable/ic_twitter_background" />
        </LinearLayout>
    </LinearLayout>

    <com.example.mobileprogramming_assignment.cairoButton
        android:id="@+id/id_signUp_Button"
        android:layout_width="@dimen/width_50"
        android:layout_height="@dimen/height_50"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_18"
        android:background="@drawable/ic_next_background" />
</RelativeLayout>